AKS-Nginx-Add-on/SSL-With-KeyVault-AzureDNS/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld  
  namespace: app-routing-ssl-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
  template:
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: app-routing-ssl-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld
